src/test/resources/de/cd4analysis/cocos/ebnf/invalid/CD4AC0004.cd
package de.cd4analysis.cocos;

classdiagram CD4AC0004 {
  class A;
  class B;
  interface A;
  class B;
  enum C;
  class C;
}